<resources>
    <string name="locale">en</string>
    <string name="stations_icon_label">Öffi Stations</string>
    <string name="directions_icon_label">Öffi Directions</string>
    <string name="plans_icon_label">Öffi Plans</string>
    <string name="operations_icon_label">Öffi Operations</string>
    <string name="disclaimer_network">data provided by\n%s</string>
    <string name="disclaimer_responsibility">errors and omissions excepted</string>
    <string name="disclaimer_responsibility_2line">errors and omis-\nsions excepted</string>
    <string name="navigation_drawer_message">I\'m developing Öffi with love in my spare time. It\'s free to use and there are no ads. If you would like show your support, can you rate the app 5 stars and recommend it to your friends?</string>
    <string name="action_bar_navigator_description">Navigator</string>
    <string name="action_bar_back_description">Back</string>
    <string name="action_bar_progress_description">Refresh</string>
    <string name="action_bar_overflow_description">More</string>
    <string name="stations_activity_title">Nearby Stations</string>
    <string name="station_details_activity_title">Station Details</string>
    <string name="directions_activity_title">Directions</string>
    <string name="operations_activity_title">Operations</string>
    <string name="trip_details_title">Connection Details</string>
    <string name="journey_details_title">Line Details</string>
    <string name="operation_details_title">Operation Details</string>
    <string name="navigation_title">Navigation</string>
    <string name="operation_navigation_title">Operation Guide</string>
    <string name="plans_activity_title">Network Plans</string>
    <string name="network_picker_activity_title">Pick Transportation Network</string>
    <string name="assistant_label_title">Öffi Assistant</string>
    <string name="global_options_operations_comment">Drivers\' operations planning</string>
    <string name="global_options_stations_comment">Departure times and delays</string>
    <string name="global_options_directions_comment">From door to door</string>
    <string name="global_options_plans_comment">For a rough overview</string>
    <string name="global_options_show_log_title">Show log</string>
    <string name="global_options_report_bug_title">Report bug</string>
    <string name="global_options_preferences_title">Settings</string>
    <string name="global_options_extras_title">Extras</string>
    <string name="global_options_clear_navigation_title">Clear all navigations</string>
    <string name="global_options_about_title">About %1$s</string>
    <string name="global_options_gift_url">https://oeffi.schildbach.de/gift.html</string>
    <string name="global_options_share_app_title">Share %1$s</string>
    <string name="global_options_share_app_text">This is the link to download and install the %1$s app.\n\n%2$s</string>
    <string name="global_preferences_title">Common</string>
    <string name="global_preferences_network_provider_title">Transport network</string>
    <string name="global_preferences_network_provider_summary">Pick transportation network.</string>
    <string name="global_preferences_show_hints_title">Show hints</string>
    <string name="global_preferences_show_hints_summary">Show useful hints now and then.</string>
    <string name="global_preferences_check_for_updates_title">Check for updates</string>
    <string name="global_preferences_check_for_updates_summary">Check if updates are available, when starting the app.</string>
    <string name="global_preferences_location_settings_title">Location settings</string>
    <string name="global_preferences_location_settings_summary">Enable location providers, e.g. GPS.</string>
    <string name="global_preferences_battery_optimizations_title">Battery optimizations</string>
    <string name="global_preferences_battery_optimizations_summary">If the app-widget cannot fetch departure times while your device is in standby, you should disable battery optimizations for Öffi.</string>
    <string name="shortcuts_preferences_title">Homescreen Shortcuts</string>
    <string name="shortcuts_preferences_summary">Create shortcuts on homescreen</string>
    <string name="assistant_title">Öffi as assistant app</string>
    <string name="assistant_enabled_title">Make Öffi an assistant app</string>
    <string name="assistant_choose_title">Set Öffi in system …</string>
    <string name="assistant_choose_assistant_title">… as default assistant app</string>
    <string name="assistant_choose_voice_title">… as default voice assistant app</string>
    <string name="assistant_button_title">On <b>device button</b> action …</string>
    <string name="assistant_headset_title">On <b>headset</b> action …</string>
    <string name="assistant_action_nearby_stations_enabled_title">… start \"nearby stations\"</string>
    <string name="assistant_action_nearby_stations_enabled_summary">
        When the previous click started a navigation action, then this is done on the second click within 5 seconds
    </string>
    <string name="assistant_action_navigation_instruction_enabled_title">… speak navigation instruction</string>
    <string name="assistant_action_navigation_screen_enabled_title">… show navigation information</string>
    <string name="assistant_action_fallback_app_title">… open another assistant</string>
    <string name="assistant_action_fallback_app_summary">Choose another assistant app as fallback.  [%s]</string>
    <string name="assistant_choose_fallback_app_title">Choose another assistant app as fallback.</string>
    <string name="assistant_choose_fallback_app_none">(none)</string>
    <string name="about_title">About %1$s</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_copyright_summary">© 2010-2026, the Öffi developers</string>
    <string name="about_license_title">License</string>
    <string name="about_data_provider_title">Data Supplier</string>
    <string name="about_data_provider_summary_pattern1">Data is supplied by %1$s</string>
    <string name="about_data_provider_summary_pattern2">\nand %1$s</string>
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_source_title">Source code</string>
    <string name="about_forum_title">Forum / Discussions</string>
    <string name="about_changelog_title">View Changelog</string>
    <string name="about_changelog_summary">https://oeffi.schildbach.de/changelog.html</string>
    <string name="about_faq_title">FAQ</string>
    <string name="about_update_and_share_title">Update and Share</string>
    <string name="about_check_update_title">Check for Updates</string>
    <string name="about_check_update_summary">Check if an update of this app is available</string>
    <string name="about_update_title">Update</string>
    <string name="about_update_summary">Download and install latest version</string>
    <string name="about_download_apk_title">Download APK</string>
    <string name="about_download_apk_summary">Download latest APK file</string>
    <string name="about_share_title">Share</string>
    <string name="about_share_summary">Send link to share the app with remote friends</string>
    <string name="about_show_qr_title">Show QR</string>
    <string name="about_show_qr_summary">Show QR code to share the app with a local friend</string>
    <string name="about_participate_title">Participate</string>
    <string name="about_market_app_title">Rate or Review Öffi</string>
    <string name="extras_title">Special Functions</string>
    <string name="extras_tripextrainfo_enabled_title">Acquire extra info for trips</string>
    <string name="network_picker_firsttime_message">Because you are using Öffi for the first time, you need to pick a region that suits you well. You
		can change this later.</string>
    <string name="network_picker_entry_usage">%.1f MB\ninstalled</string>
    <string name="network_picker_entry_license">License:\n%s</string>
    <string name="network_picker_entry_state_alpha">alpha</string>
    <string name="network_picker_entry_state_beta">beta</string>
    <string name="network_picker_entry_state_dead">DEAD SERVER?</string>
    <string name="network_picker_entry_state_deprecated">deprecated</string>
    <string name="network_picker_entry_state_wip">under development</string>
    <string name="network_picker_separator_last">Last used</string>
    <string name="network_picker_separator_suggested">Suggested</string>
    <string name="network_picker_separator_nearby">Nearby</string>
    <string name="network_picker_separator_europe">Europe</string>
    <string name="network_picker_separator_world">World</string>
    <string name="network_picker_context_remove_title">Remove Data</string>
    <string name="toast_add_favorite">%s\nadded to favorites</string>
    <string name="stations_intentfilter_nearby_title">Nearby Stops or Stations</string>
    <string name="stations_list_entry_no_departures">(No departures)</string>
    <string name="stations_list_entry_product_filtered">(None of the departures match the product filter)</string>
    <string name="stations_list_entry_interval">(approx. %d min interval)</string>
    <string name="stations_list_acquiring_location">Acquiring location…</string>
    <string name="stations_list_cannot_acquire_location">Cannot acquire device location.</string>
    <string name="stations_list_cannot_acquire_location_hint">Try enabling at least one location provider and check the app permissions.</string>
    <string name="stations_list_location_settings">Location settings</string>
    <string name="stations_list_querying_nearby">Searching nearby stations…</string>
    <string name="stations_list_matching">Matching…</string>
    <string name="stations_list_empty_nearby">No nearby stations.</string>
    <string name="stations_list_empty_nearby_hint">Consider selecting another transportation network.</string>
    <string name="stations_list_empty_query">No stations matched.</string>
    <string name="stations_list_empty_query_hint">Have you spelled it correctly? Try a more general query.</string>
    <string name="stations_list_network_settings">Switch network</string>
    <string name="stations_location_permission_missing">There is no permission to read the device\'s location.</string>
    <string name="stations_location_permission_request">Grant permission</string>
    <string name="stations_location_provider_disabled">disabled</string>
    <string name="stations_location_provider_enabled">enabled</string>
    <string name="stations_location_provider_acquiring">acquiring</string>
    <string name="stations_message_missing_capability">The selected transportation network does not serve departure times.\nConsider selecting another network.</string>
    <string name="stations_connectivity_warning">Offline mode: Your device is not connected.\nThus, departure times will not be shown.</string>
    <string name="stations_no_departures_for_address">Cannot show departures for an address.</string>
    <string name="stations_location_hint">Find near …</string>
    <string name="stations_map_pin_button_center">Search here</string>
    <string name="stations_nearby_stations_error_title">Problem loading nearby stations data</string>
    <string name="stations_nearby_stations_error_message">Make sure your phone is connected to the Internet. Do you want to continue?</string>
    <string name="directions_query_stored_trip_context_search">Search alternative connections</string>
    <string name="directions_query_stored_trip_context_show">Show</string>
    <string name="directions_query_stored_trip_context_navigate">Navigate</string>
    <string name="directions_query_stored_trip_context_remove">Delete</string>
    <string name="directions_query_stored_trip_context_set_done">Mark as done</string>
    <string name="directions_query_stored_trip_context_unset_done">Remove mark as done</string>
</resources>